--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,49 @@
 Revision history for Perl extension XML::Parser.
 
+2.44 2015-01-12 (by Todd Rinaldo)
+    - RT 99098 - Revert "Add more useful error message on parse to Expat". It breaks
+      XML::Twig. Calling code will need to do this if it's needed.
+    - RT 100959 - Add use FileHandle to t/astress.t - Make perl 5.10.0 happy.
+
+2.43 2014-12-11 (by Todd Rinaldo)
+    - POD patch to man from Debian via Nicholas Bamber
+    - POD patch from Debian via gregor herrmann.
+    - Add more useful error message on parse to Expat
+    - Fix LWP dependency to be LWP::Useragent
+    - Bump to 2.43 for overdue release to CPAN.
+
+2.42_01 2013-07-12 (by Todd Rinaldo)
+    - Added instructions to README for OSX
+    - XS changes: stop using SvPV(string, PL_na)
+    - Fix documentation typos
+
+2.41 2011-06-01 (by Todd Rinaldo)
+    - Tests are cleaned. promoting to stable. No changes since 2.40_02
+
+2.40_02 2011-05-31 (by Todd Rinaldo)
+    - TODO some tests which fail in Free BSD due to improper expat CVE patch
+      http://www.freebsd.org/cgi/query-pr.cgi?pr=157469
+
+2.40_01 2011-05-24 (by Todd Rinaldo)
+    - better installation instructions
+    - Small spelling patches from Debian package - Thanks Nicholas Bamber
+    - RT 68399 - Upgrade Devel::CheckLib to 0.93 to make it
+      perl 5.14 compliant - qw()
+    - RT 67207 - Stop doing tied on globs - Thanks sprout
+    - RT 31319 - Fix doc links in POD for XML/Parser.pm
+
+2.40  2010-09-16 (by Alexandr Ciornii)
+    - Add windows-1251.enc, ibm866.enc, koi8-r.enc (Russian)
+    - Add windows-1255.enc (Hebrew)
+    - Update iso-8859-7.enc (RT#40712)
+    - Use Devel::CheckLib
+    - Better description of expat packages
+    - Better Perl style in both code and docs
+
 2.36
     - Fix for Carp::Heavy bugs
 
-2.35
+2.35   (mostly by Alexandr Ciornii)
     - Works in 5.10 (Andreas J. Koenig)
     - Added license in Makefile.PL (Alexandr Ciornii)
     - Makefile.PL also searches for expat in C:/lib/Expat-2.0.0 (Alexandr Ciornii)
